minor changes to the 5th task

--- a/theInstagramClone/index.html
+++ b/theInstagramClone/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<div class="modal">
+<div class="modal-container">
 
 
 </div>
@@ -151,37 +151,37 @@
 </template>
 
 <template id="modal-post">
-    <div class="modal-post">
+    <div class="modal-post post">
 
-        <div class="modal-post-image">
+        <div class="modal-post post-image">
             <img alt="modal post window image" src="photos/img3.jpeg">
         </div>
 
-        <aside class="modal-post-aside">
+        <aside class="modal-post post-aside">
 
-            <div class="modal-post-details">
+            <div class="modal-post post-details">
 
                 <h4>User:</h4>
-                <div class="modal-post-user"></div>
+                <div class="modal-post post-user"></div>
 
                 <h4>Created At:</h4>
-                <div class="modal-post-date"></div>
+                <div class="modal-post post-date"></div>
 
                 <h4>Description:</h4>
-                <div class="modal-post-description"></div>
+                <div class="modal-post post-description"></div>
 
                 <h4>Hashtags:</h4>
-                <div class="modal-post-hashtags"></div>
+                <div class="modal-post post-hashtags"></div>
 
             </div>
 
-            <div class="modal-post-buttons">
-                <div class="modal-post-like">
+            <div class="modal-post post-buttons">
+                <div class="modal-post post-like">
 
-                    <div class="modal-post-likes">
+                    <div class="modal-post post-likes">
 
-                        <div class="modal-post-likes-image"><img src="" alt="likes: "></div>
-                        <div class="modal-post-likes-number">223</div>
+                        <div class="modal-post post-likes-image"><img src="" alt="likes: "></div>
+                        <div class="modal-post post-likes-number">223</div>
 
                     </div>
 
