--- a/theInstagramClone/static/index.html
+++ b/theInstagramClone/static/index.html
@@ -77,7 +77,7 @@
                             <input type="text" class="hashtag-input-static" value="#" disabled>
 
                             <div class="hashtag-subdib">
-                                <input type="text" name="filter-hashtag"
+                                <input type="text" name="hashtag"
                                        placeholder="add hashtag" class="hashtag-input">
 
                                 <button type="button" class="hashtag-remove-button">-</button>
@@ -142,7 +142,7 @@
         <input type="text" class="hashtag-input-static" value="#" disabled>
 
         <div class="hashtag-subdib">
-            <input type="text" name="filter-hashtag"
+            <input type="text" name="hashtag"
                    placeholder="add hashtag" class="hashtag-input">
 
             <button type="button" class="hashtag-remove-button">-</button>
@@ -154,7 +154,7 @@
     <div class="modal-post post">
 
         <div class="modal-post post-image">
-            <img alt="modal post window image" src="photos/img3.jpeg">
+            <img alt="image preview" src="photos/img3.jpeg">
         </div>
 
         <aside class="modal-post post-aside">
@@ -187,8 +187,8 @@
 
                 </div>
 
-                <button class="modal-post-edit button-with-hover">Edit Post</button>
-                <button class="modal-post-delete button-with-hover">Delete Post</button>
+                <button class="edit button-with-hover">Edit Post</button>
+                <button class="delete button-with-hover">Delete Post</button>
 
             </div>
 
@@ -201,10 +201,12 @@
     <div class="modal-post post">
 
         <div class="modal-post post-image">
-            <img alt="modal post window image" src="photos/img3.jpeg">
+            <img alt="image preview" class="image-preview" src="photos/img3.jpeg">
         </div>
 
         <aside class="modal-post post-aside">
+
+            <span class="error-span"></span>
 
             <form name="editing-form" id="editing-form" action="#"
                   class="modal-post post-details">
@@ -219,6 +221,10 @@
                 <label for="editing-description">Description:</label>
                 <textarea name="description" id="editing-description"></textarea>
 
+                <label for="editing-image-file">Change Photo</label>
+                <input type="file" id="editing-image-file" name="image-file"
+                       accept=".jpg, .jpeg, .png">
+
                 <div class="editing-hashtags-block">
 
                     <p>Type some hashtags</p>
@@ -229,7 +235,7 @@
                             <input type="text" class="hashtag-input-static" value="#" disabled>
 
                             <div class="hashtag-subdib">
-                                <input type="text" name="filter-hashtag"
+                                <input type="text" name="hashtag"
                                        placeholder="add hashtag" class="hashtag-input">
 
                                 <button type="button" class="hashtag-remove-button">-</button>
@@ -244,8 +250,71 @@
 
             <div class="modal-post post-buttons">
 
-                <button class="modal-editing-save button-with-hover">Save</button>
-                <button class="modal-editing-discard button-with-hover">Discard</button>
+                <button class="save button-with-hover">Save</button>
+                <button class="discard button-with-hover">Discard</button>
+
+            </div>
+
+        </aside>
+
+    </div>
+</template>
+
+<template id="modal-creating">
+    <div class="modal-post post">
+
+        <div class="modal-post post-image">
+            <img alt="image preview" class="image-preview" src="">
+        </div>
+
+        <aside class="modal-post post-aside">
+
+            <span class="error-span"></span>
+
+            <form name="creating-form" id="creating-form" action="#"
+                  class="modal-post post-details">
+
+                <h4>User:</h4>
+                <div class="modal-post post-user"></div>
+
+                <h4>Created At:</h4>
+                <div class="modal-post post-date"></div>
+
+
+                <label for="creating-description">Description:</label>
+                <textarea name="description" id="creating-description"></textarea>
+
+                <label for="creating-image-file">Change Photo</label>
+                <input type="file" id="creating-image-file" name="image-file"
+                       accept=".jpg, .jpeg, .png">
+
+                <div class="creating-hashtags-block">
+
+                    <p>Type some hashtags</p>
+
+                    <div class="creating-hashtags">
+
+                        <div class="hashtag-block">
+                            <input type="text" class="hashtag-input-static" value="#" disabled>
+
+                            <div class="hashtag-subdib">
+                                <input type="text" name="hashtag"
+                                       placeholder="add hashtag" class="hashtag-input">
+
+                                <button type="button" class="hashtag-remove-button">-</button>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </form>
+
+            <div class="modal-post post-buttons">
+
+                <button class="save button-with-hover" disabled>Save</button>
+                <button class="discard button-with-hover">Discard</button>
 
             </div>
 
