started accomplishing tasks 8-10 currently working on sending body in xmlHttpRequest to server and parse it with body-parser module

--- a/theInstagramClone/static/index.html
+++ b/theInstagramClone/static/index.html
@@ -48,7 +48,7 @@
         </section>
 
         <aside class="right-block">
-            <form name="filter-form" id="filter-form" action="#">
+            <form name="filter-form" id="filter-form">
 
 
                 <h3>Filter</h3>
@@ -92,7 +92,6 @@
                     <button type="button" class="filter-button filter-apply">Apply</button>
                     <button type="button" class="filter-button filter-clear">Clear</button>
                 </div>
-
 
             </form>
 
