added likes and logging support via xhr. now all functions work with xhr.
TODO:
-add multer to upload images
-add long polling

--- a/theInstagramClone/static/index.html
+++ b/theInstagramClone/static/index.html
@@ -22,11 +22,11 @@
 <div class="page">
     <header>
         <div class="header-title">
-            <h2>The Instagram Clone</h2>
+            <h2 id="siteTitle">The Instagram Clone</h2>
         </div>
 
         <div class="current-user-name">
-            <p>Sieviaryn Budrys</p>
+            <p>Not initialized user name</p>
         </div>
 
         <nav class="header-nav">
