--- a/theInstagramClone/static/index.html
+++ b/theInstagramClone/static/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
 
     <!--   scripts   -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
     <script src="scripts/clientControllerModule.js"></script>
 
 </head>
